# CoreSystem

./: .gitignore  LICENSE  README.md  launch.py
src/core/: CMakeLists.txt  package.xml
src/core/src/: Core.cpp  Core.hpp  Main.cpp
src/core_interfaces/: CMakeLists.txt  package.xml
src/core_interfaces/include/core_interfaces/: Types.hpp
src/core_interfaces/msg/: Heartbeat.msg
src/core_interfaces/srv/: HeartbeatConfig.srv  HeartbeatConnect.srv
